# ss-trading-bot-server

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  quote_format.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: Application.h  Broker.h  Sender.h  Server.h
src/: Application.cpp  Broker.cpp  main.cpp
